Se crea rama hotfix

--- a/prueba.html
+++ b/prueba.html
@@ -4,8 +4,9 @@
 
 <h1>Prueba de repositorio colaborativo</h1>
 <br>
-<h2>v1.0.0</h1>
+<h2>v1.0.1</h1>
 <br>
 <p>Creación de rama MASTER</p>
+<p>Se crea rama HOTFIX</p>
 </body>
 </html>
