Se modifica rama feature1

--- a/prueba.html
+++ b/prueba.html
@@ -9,5 +9,6 @@
 <p>Creación de rama MASTER</p>
 <p>Se crea rama HOTFIX</p>
 <p>Se crea rama FEATURE1</p>
+<p>Se modifica rama FEATURE1</p>
 </body>
 </html>
